# scheduler_tg_bot

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.celery  README.md  docker-compose.yaml  pyproject.toml
app/: bot.py  celery_config.py  cryption.py  db.py  handlers.py  tasks.py  utils.py
db_scipts/: mongo-init.js
